fix: feature list item alignment

--- a/themes/bella/styles/section.feature-list.scss
+++ b/themes/bella/styles/section.feature-list.scss
@@ -2,6 +2,7 @@
   [ui-section="feature-list"] {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: var(--spacing-64);
     padding: attr(data-top-spacing px) 8% attr(data-bottom-spacing px) !important;
 
